--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" type="img/png" href="#" />
-    <link rel="stylesheet" href=""
     <title>Reckless Dragonfruit: a visual novel</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" type="img/png" href="/img/dragonfruit.png" />
   </head>
   <body>
-    <script type="text/javascript" src="script.js" id='VisualNovelEngine'></script>
+    <script
+      type="text/javascript"
+      src="script.js"
+      id="VisualNovelEngine"
+    ></script>
   </body>
 </html>
