Changed tab icon to dragonfruit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reckless Dragonfruit: a visual novel</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" type="img/png" href="/img/dragonfruit.png" />
+    <link rel="shortcut icon" type="img/png" href="/img/dragonfruit.png" />
   </head>
   <body>
     <script
